# Twitch-Channel-Points-Miner-v2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  delete_pycache.sh  docker-compose.yml  env.md  example.py  keep_alive.py  localRunner.py  pickle_view.py  port.py  pre_run.py  prepare_miner.py  pyproject.toml  requirements.txt  run.py  setup.py  vercel.json
.github/workflows/: deploy-docker.yml
TwitchChannelPointsMiner/: JSONDictDecoder.py  TwitchChannelPointsMiner.py  constants.py  logger.py  utils.py  watch_streak_cache.py
TwitchChannelPointsMiner/classes/: AnalyticsServer.py  Chat.py  ClientSession.py  Discord.py  EventHook.py  Gotify.py  Matrix.py  Ntfy.py  PubSub.py  Pushover.py  Settings.py  Telegram.py  Twitch.py  TwitchLogin.py  TwitchWebSocket.py  WebSocketsPool.py  Webhook.py
TwitchChannelPointsMiner/classes/entities/: Bet.py  Campaign.py  CommunityGoal.py  Drop.py  EventPrediction.py  Message.py  PubsubTopic.py  Strategy.py  Stream.py  Streamer.py
TwitchChannelPointsMiner/classes/entities/strategies/: SmartHighOdds.py
TwitchChannelPointsMiner/classes/event_prediction/: Bettor.py  Manager.py  ManagerFactory.py
TwitchChannelPointsMiner/classes/gql/: Errors.py  Integration.py  __init__.py
TwitchChannelPointsMiner/classes/gql/data/: Parser.py
TwitchChannelPointsMiner/classes/websocket/: Pool.py  __init__.py
assets/: charts.html  script.js  style.css
tests/: test_EventPrediction.py  test_JSONDictDecoder.py  test_PubSub.py  test_bet.py  test_event_prediction_Bettor.py  test_event_prediction_Manager.py
(+30 files in other folders)
